// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures lint code blocks should work as expected: code-blocks.md 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        0,
        511,
      ],
      "text": "# abc

# abc

<div>Hello World!</div>

<!-- eslint-disable unicorn/prefer-spread -->

\`\`\`JavaScript
export var a = 1 == 2

export const b = [].concat(a)
\`\`\`

    export var a = 1 == 2

\`\`\`log
This is not parsable as JavaScript!
\`\`\`

<!-- eslint-mdx -->

\`\`\`jsx
export const App = () => <div>2 > 1</div>
\`\`\`

<!-- eslint-skip -->

\`\`\`TypeScript
export type Value = 1 | 2 | 3 | 4 | 5
\`\`\`

\`\`\`MarkDown
# abc

# abc
\`\`\`

<!-- mdx -->

\`\`\`mdx
import React from 'react'

<header>Header</header>

# abc

# abc
\`\`\`
",
    },
    "line": 3,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Do not use headings with similar content per section (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 4,
    "endLine": 17,
    "line": 15,
    "message": "Missing code language flag",
    "nodeType": "Program",
    "ruleId": "remark-lint-fenced-code-flag",
    "severity": 1,
  },
  Object {
    "column": 18,
    "endColumn": 30,
    "endLine": 12,
    "fix": Object {
      "range": Array [
        140,
        152,
      ],
      "text": "[a].flat()",
    },
    "line": 12,
    "message": "Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.",
    "messageId": "prefer-array-flat",
    "nodeType": "CallExpression",
    "ruleId": "unicorn/prefer-array-flat",
    "severity": 2,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 38,
    "line": 38,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 38,
    "line": 38,
    "message": "Do not use headings with similar content per section (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 50,
    "line": 50,
    "message": "Don’t use multiple top level headings (5:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 50,
    "line": 50,
    "message": "Do not use headings with similar content per section (5:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: 287.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: 292.mdx 1`] = `
Array [
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 5,
    "fix": Object {
      "range": Array [
        64,
        113,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 5,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 334.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: 336.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: 367.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: 371.mdx 1`] = `
Array [
  Object {
    "column": 13,
    "endColumn": 14,
    "endLine": 7,
    "fix": Object {
      "range": Array [
        59,
        60,
      ],
      "text": "",
    },
    "line": 7,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 380.mdx 1`] = `
Array [
  Object {
    "column": 45,
    "endColumn": 46,
    "endLine": 1,
    "fix": Object {
      "range": Array [
        44,
        45,
      ],
      "text": "",
    },
    "line": 1,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 60,
    "endColumn": 61,
    "endLine": 2,
    "fix": Object {
      "range": Array [
        105,
        106,
      ],
      "text": "",
    },
    "line": 2,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 52,
    "endColumn": 53,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        158,
        159,
      ],
      "text": "",
    },
    "line": 3,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 62,
    "endColumn": 63,
    "endLine": 5,
    "fix": Object {
      "range": Array [
        222,
        223,
      ],
      "text": "",
    },
    "line": 5,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 58,
    "endColumn": 59,
    "endLine": 6,
    "fix": Object {
      "range": Array [
        281,
        282,
      ],
      "text": "",
    },
    "line": 6,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 20,
    "endColumn": 21,
    "endLine": 17,
    "fix": Object {
      "range": Array [
        421,
        422,
      ],
      "text": "",
    },
    "line": 17,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 37,
    "endLine": 44,
    "fix": Object {
      "range": Array [
        825,
        853,
      ],
      "text": "
    name=\\"Basic\\"
    height=\\"100px\\"
  ",
    },
    "line": 44,
    "message": "Replace \`·name=\\"Basic\\"·height=\\"100px\\"\` with \`⏎····name=\\"Basic\\"⏎····height=\\"100px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 62,
    "line": 45,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 19,
    "endColumn": 42,
    "endLine": 48,
    "fix": Object {
      "range": Array [
        947,
        970,
      ],
      "text": "
            name=\\"a\\"
            label=\\"Tab 0\\"
          ",
    },
    "line": 48,
    "message": "Replace \`·name=\\"a\\"·label=\\"Tab·0\\"\` with \`⏎············name=\\"a\\"⏎············label=\\"Tab·0\\"⏎··········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 19,
    "endColumn": 42,
    "endLine": 51,
    "fix": Object {
      "range": Array [
        1055,
        1078,
      ],
      "text": "
            name=\\"b\\"
            label=\\"Tab 1\\"
          ",
    },
    "line": 51,
    "message": "Replace \`·name=\\"b\\"·label=\\"Tab·1\\"\` with \`⏎············name=\\"b\\"⏎············label=\\"Tab·1\\"⏎··········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 19,
    "endColumn": 42,
    "endLine": 54,
    "fix": Object {
      "range": Array [
        1163,
        1186,
      ],
      "text": "
            name=\\"c\\"
            label=\\"Tab 2\\"
          ",
    },
    "line": 54,
    "message": "Replace \`·name=\\"c\\"·label=\\"Tab·2\\"\` with \`⏎············name=\\"c\\"⏎············label=\\"Tab·2\\"⏎··········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 36,
    "endLine": 69,
    "fix": Object {
      "range": Array [
        1384,
        1411,
      ],
      "text": "
    name=\\"Card\\"
    height=\\"200px\\"
  ",
    },
    "line": 69,
    "message": "Replace \`·name=\\"Card\\"·height=\\"200px\\"\` with \`⏎····name=\\"Card\\"⏎····height=\\"200px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 81,
    "line": 70,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 36,
    "endLine": 88,
    "fix": Object {
      "range": Array [
        1856,
        1883,
      ],
      "text": "
    name=\\"Size\\"
    height=\\"200px\\"
  ",
    },
    "line": 88,
    "message": "Replace \`·name=\\"Size\\"·height=\\"200px\\"\` with \`⏎····name=\\"Size\\"⏎····height=\\"200px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 112,
    "line": 89,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 43,
    "endLine": 119,
    "fix": Object {
      "range": Array [
        2783,
        2817,
      ],
      "text": "
    name=\\"CustomLabel\\"
    height=\\"200px\\"
  ",
    },
    "line": 119,
    "message": "Replace \`·name=\\"CustomLabel\\"·height=\\"200px\\"\` with \`⏎····name=\\"CustomLabel\\"⏎····height=\\"200px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 142,
    "line": 120,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 40,
    "endLine": 151,
    "fix": Object {
      "range": Array [
        3602,
        3633,
      ],
      "text": "
    name=\\"Editable\\"
    height=\\"100px\\"
  ",
    },
    "line": 151,
    "message": "Replace \`·name=\\"Editable\\"·height=\\"100px\\"\` with \`⏎····name=\\"Editable\\"⏎····height=\\"100px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 187,
    "line": 152,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 13,
    "endColumn": 16,
    "endLine": 176,
    "fix": Object {
      "range": Array [
        4288,
        4375,
      ],
      "text": "number_ = 1) {
          this.tabs = this.tabs.concat(
            Array.from({ length: number_",
    },
    "line": 176,
    "message": "The variable \`num\` should be named \`number_\`. A more descriptive name will do too.",
    "messageId": "replace",
    "nodeType": "Identifier",
    "ruleId": "unicorn/prevent-abbreviations",
    "severity": 2,
  },
  Object {
    "column": 33,
    "endColumn": 39,
    "endLine": 177,
    "line": 177,
    "message": "Prefer the spread operator over \`Array#concat(…)\`.",
    "messageId": "array-concat",
    "nodeType": "Identifier",
    "ruleId": "unicorn/prefer-spread",
    "severity": 2,
    "suggestions": Array [
      Object {
        "desc": "First argument is an \`array\`.",
        "fix": Object {
          "range": Array [
            4321,
            4483,
          ],
          "text": "[...this.tabs, ...Array.from({ length: num })
              .fill()
              .map((_, i) => this.tabs[this.tabs.length - 1] + i + 1)]",
        },
        "messageId": "argument-is-spreadable",
      },
      Object {
        "desc": "First argument is not an \`array\`.",
        "fix": Object {
          "range": Array [
            4321,
            4483,
          ],
          "text": "[...this.tabs, Array.from({ length: num })
              .fill()
              .map((_, i) => this.tabs[this.tabs.length - 1] + i + 1)]",
        },
        "messageId": "argument-is-not-spreadable",
      },
    ],
  },
  Object {
    "column": 24,
    "endColumn": 25,
    "endLine": 180,
    "fix": Object {
      "range": Array [
        4424,
        4465,
      ],
      "text": "index) => this.tabs[this.tabs.length - 1] + index",
    },
    "line": 180,
    "message": "The variable \`i\` should be named \`index\`. A more descriptive name will do too.",
    "messageId": "replace",
    "nodeType": "Identifier",
    "ruleId": "unicorn/prevent-abbreviations",
    "severity": 2,
  },
  Object {
    "column": 12,
    "endColumn": 13,
    "endLine": 181,
    "fix": Object {
      "range": Array [
        4483,
        4484,
      ],
      "text": "",
    },
    "line": 181,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 37,
    "endColumn": 38,
    "endLine": 184,
    "fix": Object {
      "range": Array [
        4556,
        4557,
      ],
      "text": "",
    },
    "line": 184,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 40,
    "endLine": 194,
    "fix": Object {
      "range": Array [
        4631,
        4662,
      ],
      "text": "
    name=\\"Disabled\\"
    height=\\"100px\\"
  ",
    },
    "line": 194,
    "message": "Replace \`·name=\\"Disabled\\"·height=\\"100px\\"\` with \`⏎····name=\\"Disabled\\"⏎····height=\\"100px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 211,
    "line": 195,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 19,
    "endColumn": 33,
    "endLine": 199,
    "fix": Object {
      "range": Array [
        4820,
        4834,
      ],
      "text": "
            label=\\"Tab 1\\"
           ",
    },
    "line": 199,
    "message": "Replace \`·label=\\"Tab·1\\"\` with \`⏎············label=\\"Tab·1\\"⏎···········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 19,
    "endColumn": 33,
    "endLine": 203,
    "fix": Object {
      "range": Array [
        5014,
        5028,
      ],
      "text": "
            label=\\"Tab 3\\"
           ",
    },
    "line": 203,
    "message": "Replace \`·label=\\"Tab·3\\"\` with \`⏎············label=\\"Tab·3\\"⏎···········\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 36,
    "endLine": 220,
    "fix": Object {
      "range": Array [
        5365,
        5392,
      ],
      "text": "
    name=\\"Lazy\\"
    height=\\"150px\\"
  ",
    },
    "line": 220,
    "message": "Replace \`·name=\\"Lazy\\"·height=\\"150px\\"\` with \`⏎····name=\\"Lazy\\"⏎····height=\\"150px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 256,
    "line": 221,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 36,
    "endLine": 263,
    "fix": Object {
      "range": Array [
        6565,
        6592,
      ],
      "text": "
    name=\\"Nest\\"
    height=\\"100px\\"
  ",
    },
    "line": 263,
    "message": "Replace \`·name=\\"Nest\\"·height=\\"100px\\"\` with \`⏎····name=\\"Nest\\"⏎····height=\\"100px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 302,
    "line": 264,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 37,
    "endLine": 309,
    "fix": Object {
      "range": Array [
        7995,
        8023,
      ],
      "text": "
    name=\\"Title\\"
    height=\\"100px\\"
  ",
    },
    "line": 309,
    "message": "Replace \`·name=\\"Title\\"·height=\\"100px\\"\` with \`⏎····name=\\"Title\\"⏎····height=\\"100px\\"⏎··\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 6,
    "endColumn": 6,
    "endLine": 320,
    "line": 310,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "nodeType": "ExpressionStatement",
    "ruleId": "no-unused-expressions",
    "severity": 2,
  },
  Object {
    "column": 16,
    "endColumn": 17,
    "endLine": 338,
    "fix": Object {
      "range": Array [
        9044,
        9045,
      ],
      "text": "",
    },
    "line": 338,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 20,
    "endColumn": 21,
    "endLine": 339,
    "fix": Object {
      "range": Array [
        9065,
        9066,
      ],
      "text": "",
    },
    "line": 339,
    "message": "Delete \`;\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: acorn.mdx 1`] = `
Array [
  Object {
    "column": 33,
    "fatal": true,
    "line": 9,
    "message": "Parsing error: Unexpected character \`\\\\\` (U+005C) in name, expected a name character such as letters, digits, \`$\`, or \`_\`; whitespace before attributes; or the end of the tag",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: adjacent.mdx 1`] = `
Array [
  Object {
    "column": 14,
    "endColumn": 15,
    "endLine": 1,
    "fix": Object {
      "range": Array [
        13,
        14,
      ],
      "text": "",
    },
    "line": 1,
    "message": "Delete \`·\`",
    "messageId": "delete",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: basic.mdx 1`] = `
Array [
  Object {
    "column": 18,
    "endColumn": 19,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        46,
        47,
      ],
      "text": " = ",
    },
    "line": 3,
    "message": "Replace \`=\` with \`·=·\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: basic.tsx 1`] = `Array []`;

exports[`fixtures should match all snapshots: blank-lines.mdx 1`] = `
Array [
  Object {
    "column": 9,
    "endColumn": 12,
    "endLine": 1,
    "fix": Object {
      "range": Array [
        8,
        11,
      ],
      "text": " Box ",
    },
    "line": 1,
    "message": "Replace \`Box\` with \`·Box·\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 1,
    "endColumn": 16,
    "endLine": 27,
    "fix": Object {
      "range": Array [
        0,
        768,
      ],
      "text": "import {Box} from '@rebass/emotion'

# Getting Started

If you have an existing project you want to integrate MDX with, check out
the installation guides.

<Box
  p={3}
  bg=\\"lightgray\\"
  style={{
   textAlign: 'center',
   fontWeight: 'bold',
  }}
>
  [Next.js](/getting-started/next) |
  [Gatsby](/getting-started/gatsby) |
  [Create React App](/getting-started/create-react-app) |
  [React Static](/getting-started/react-static) |
  [Webpack](/getting-started/webpack) |
  [Parcel](/getting-started/parcel) |
  [Zero](/getting-started/zero)
</Box>

# Hello, world!

Here's a Twitter shortcode:

<Tweet tweetId=\\"1116723357410447360\\" />

<TextGradient>
  # Here's a text gradient shortcode!
</TextGradient>

Here's a YouTube shortcode:

<YouTube videoId=\\"4fHw4GeW3EU\\" />
",
    },
    "line": 27,
    "message": "Don’t use multiple top level headings (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 36,
    "endLine": 35,
    "line": 35,
    "message": "Don’t use multiple top level headings (3:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: code-blocks.md 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "fix": Object {
      "range": Array [
        0,
        511,
      ],
      "text": "# abc

# abc

<div>Hello World!</div>

<!-- eslint-disable unicorn/prefer-spread -->

\`\`\`JavaScript
export var a = 1 == 2

export const b = [].concat(a)
\`\`\`

    export var a = 1 == 2

\`\`\`log
This is not parsable as JavaScript!
\`\`\`

<!-- eslint-mdx -->

\`\`\`jsx
export const App = () => <div>2 > 1</div>
\`\`\`

<!-- eslint-skip -->

\`\`\`TypeScript
export type Value = 1 | 2 | 3 | 4 | 5
\`\`\`

\`\`\`MarkDown
# abc

# abc
\`\`\`

<!-- mdx -->

\`\`\`mdx
import React from 'react'

<header>Header</header>

# abc

# abc
\`\`\`
",
    },
    "line": 3,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Do not use headings with similar content per section (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 4,
    "endLine": 17,
    "line": 15,
    "message": "Missing code language flag",
    "nodeType": "Program",
    "ruleId": "remark-lint-fenced-code-flag",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: comments.mdx 1`] = `
Array [
  Object {
    "column": 2,
    "fatal": true,
    "line": 2,
    "message": "Parsing error: Unexpected character \`!\` (U+0021) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\` (note: to create a comment in MDX, use \`{/* text */}\`)",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: details.mdx 1`] = `
Array [
  Object {
    "column": 1,
    "fatal": true,
    "line": 1,
    "message": "Parsing error: Expected a closing tag for \`</summary>\` (1:1-1:10) before the end of \`paragraph\`",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: jsx-in-list.mdx 1`] = `
Array [
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 1,
    "fix": Object {
      "range": Array [
        8,
        57,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 1,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 5,
    "fix": Object {
      "range": Array [
        143,
        192,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 5,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 9,
    "fix": Object {
      "range": Array [
        278,
        327,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 9,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 13,
    "fix": Object {
      "range": Array [
        413,
        462,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 13,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 17,
    "fix": Object {
      "range": Array [
        548,
        597,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 17,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
  Object {
    "column": 9,
    "endColumn": 58,
    "endLine": 21,
    "fix": Object {
      "range": Array [
        683,
        732,
      ],
      "text": "
      kind=\\"docs-packages-vuetify-preset\\"
      story=\\"page\\"
    ",
    },
    "line": 21,
    "message": "Replace \`·kind=\\"docs-packages-vuetify-preset\\"·story=\\"page\\"\` with \`⏎······kind=\\"docs-packages-vuetify-preset\\"⏎······story=\\"page\\"⏎····\`",
    "messageId": "replace",
    "nodeType": null,
    "ruleId": "prettier/prettier",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: leading-spaces.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: markdown.md 1`] = `Array []`;

exports[`fixtures should match all snapshots: nested.md 1`] = `Array []`;

exports[`fixtures should match all snapshots: no-unescaped-entities.mdx 1`] = `Array []`;

exports[`fixtures should match all snapshots: processor.mdx 1`] = `
Array [
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Don’t use multiple top level headings (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  Object {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Do not use headings with similar content per section (1:1)",
    "nodeType": "Program",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: remark.md 1`] = `Array []`;

exports[`fixtures should match all snapshots: remark.mdx 1`] = `
Array [
  Object {
    "column": 2,
    "fix": Object {
      "range": Array [
        42,
        73,
      ],
      "text": " ",
    },
    "line": 5,
    "message": "Unused eslint-disable directive (no problems were reported from 'mdx/remark').",
    "nodeType": null,
    "ruleId": null,
    "severity": 2,
  },
]
`;
